--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       <a href="https://ieeexplore.ieee.org/abstract/document/10012038/" style="color:inherit">
         <i class="fa fa-file-pdf-o fa-4x"></i></a> 
     </div>
+    <div class="hidden-xs hidden-sm col-md-2" style="text-align:left; margin-left:0px;">
+      <a href="https://github.com/arvintashakori/SemiPFL" style="color:inherit">
+        <i class="fa fa-github fa-4x"></i></a>
+    </div>
   </div>
 </div>
 
